# sendgrid_thin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-workflow.yml
src/: error.rs  lib.rs  sendgrid.rs
