[package]
name = "sendgrid_thin"
version = "0.4.0"
edition = "2021"
authors = ["OLoKo64 <reinaldorozatoj.11cg1@aleeas.com>"]
description = "A small unofficial library to send emails using Sendgrid."
categories = ["api-bindings"]
homepage = "https://sendgrid.com"
repository = "https://github.com/OLoKo64/sendgrid_thin"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking"]
blocking = []

[dependencies]
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
