[package]
name = "sendgrid_thin"
version = "0.4.5"
edition = "2021"
authors = ["OLoKo64 <reinaldorozatoj.11cg1@aleeas.com>"]
description = "A small unofficial library to send emails using Sendgrid."
categories = ["api-bindings"]
homepage = "https://sendgrid.com"
repository = "https://github.com/OLoKo64/sendgrid_thin"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking"]
blocking = []

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt"] }
